fixed project section
fixed project section not showing in full when clicked on it in nav bar.
fixed : width: 100%,
height: 10vh; in CSS

--- a/Website-Resume-Project/Website-Resume-Project/style.css
+++ b/Website-Resume-Project/Website-Resume-Project/style.css
@@ -108,6 +108,11 @@ body {
 }
 /*PROJECTS SECTION END*/
 
+#projects-section {
+    width: 100%;
+    height: 10vh;
+}
+
 /*LOADING ANIMATION START*/
 #loading-animation{
     display: flex;
